# LongSemAnnotator

./: README.md  download_sotab.sh  preprocessing.py  pyproject.toml  setup_folder.sh
longsemannotator/: base_model.py  build_lb.py  classification_layers.py  create_embeddings.py  dataset.py  evaluate.py  sotab_specifics.py  tokenize_serialize.py  trainer.py
longsemannotator/auxiliar_functions/: filtering_functions.py  general_purpose_functions.py  preprocessing_functions.py  serialization_functions.py  tokenization_functions.py
